--- a/src/css/style.css
+++ b/src/css/style.css
@@ -461,11 +461,11 @@ img, svg {
     content: '';
     position: absolute;
     right: 2.6%;
-    top: 13.6%;
+    top: 13.6% !important;
     border: none;
     width: 13.5px;
     height: 8.5px;
-    background: url('../img/arrow.svg') no-repeat;
+    background: url('../img/arrow.svg') no-repeat !important;
     transition: transform 0.2s ease-in-out;
     z-index: 2;
 }
